# stock-agent-arbiter

./: .env.example  .gitignore  README.md  dtrader-stock-ai-agent-wechat.md  pyproject.toml
src/stock_agent_arbiter/: __init__.py  cli.py  config.py  models.py  prompts.py  renderer.py  report.py  v3_adapter.py  workflow.py
tests/: conftest.py  test_config.py  test_report_renderer_cli.py  test_v3_adapter.py  test_workflow.py
