[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stock-agent-arbiter"
version = "0.1.0"
description = "LangGraph CLI for buyer/seller stock evidence debate and arbiter summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dtrader-v3-sdk>=0.1.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
stock-agent-arbiter = "stock_agent_arbiter.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agent_arbiter"]
